Makes lots of changes; optimized header css in _global.scss eliminating 10 lines unecessary lines. Disabled _base from _application.scss as the sass was interupting my css in _global.scss.

--- a/source/_assets/stylesheets/application.scss
+++ b/source/_assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 
 @import "bourbon";
 @import "neat";
-@import "base/base";
+// Took base/base out as it was constantly conflicting with my sass in _gloabal.scss
+// base/base contains built in sass files for several functions ie forms.scss, buttons.scss etc.
+//@import "base/base";
 
 @import "global";
