--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<div class="contentfooter">
-  <h4>This is the footer</h4>
+<div class="footercontent">
+  <h5>This is the footer</h5>
 </footer>
 </div>
