--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,12 +1,15 @@
 <header>
-	<div class="headerlogo">
-		<img src="../images/huboard-enterprise-logo.png"/>
-	</div>
+  <div class="headercontainer">
+    <div class="headerlogo">
+		  <img src="../images/huboard-enterprise-logo.png"/>
+	  </div>
 	
-	<div class="headercontent">
-	<a href="">Support</a>
-	<a href="">Return to Huboard Enterprise</a>
-	</div>
+	  <div class="headercontent">
+      <a href="">Versions</a>
+	    <a href="">Support</a>
+	    <a href="">Return to Huboard Enterprise</a>
+	  </div>
+  </div>
 </header>
 
 <body>
