--- a/source/_assets/stylesheets/_global.scss
+++ b/source/_assets/stylesheets/_global.scss
@@ -1,30 +1,29 @@
 body {
-  @include background(#efefef);
+  @include background(#ffffff);
   color: #777777;
 }
 
 .bodycontent {
   height: 80vh;
-  background-color: #efefef;
-  text-align: left;
+  background-color: #ffffff;
+}
 
-
-.container {
-  background-color: #efefef;
-  text-align: left;
+.bodycontainer {
+  background-color: #ffffff;
   margin-left: auto;
   margin-right: auto;
   width: 945px;
-  text-align: left;
-
-h1 {
-      font-weight: 200;
-    }
-  }
 }
 
+.headercontainer {
+  background-color: #391b65;
+  margin-left: auto;
+  margin-right: auto;
+  width: 945px;
+}    
+
 header {
-  @include background(#391b65);
+  background-color: #391b65;
   height: 60px;
   width: 100%;
   margin: 0px;
@@ -32,26 +31,23 @@ header {
 }
 
 .headerlogo {
-  @include span-columns(5);
-  position: relative;
-  left: 23%;
+  @include span-columns(7);
 }
 
 .headercontent {
-  @include span-columns(7);
+  @include span-columns(5);
   @include word-wrap;
+  padding: 3px;
+  
+  a:link, a:visited {
   color: #ffffff;
-  position: absolute; 
-  top: 0px;
-  right: 10%;
-  height: 60px;
-  width: 35%;
-  padding: 18px;
-	}
-a, {
-  color: #ffffff;
-  hover: #00ff00;
+  font-weight: bold;
+  font-size: 15px;
+  text-decoration: none;
+  padding: 5px;
+  }
 }
+
 footer {
   background-color: #eeeeee;
   @include border-style(solid null null);
@@ -60,41 +56,55 @@ footer {
   height: 90px;
   width: 100%;
   margin: 0px;
-  padding: 18px;
 }
 
 .footercontent {
-  @include span-columns(4);
+  margin-left: auto;
+  margin-right: auto;
   background-color: #301b65;
   color: #ffffff;
-  position: absolute;
-  right: 15%;
-  top: 0px;
-  height: 60px;
-  padding: 18px;
         }
 
-form {
-  width:500px;
-  margin:50px auto;
-  verticle-align: top;
-}
+.hb-form {
+  margin:60px;
+  margin-left: 150px;
+  margin-right: 150px;
+      }
 
 .search {
-  padding:8px 15px;
-  background:rgba(50, 50, 50, 0.2);
-  border:0px solid #dbdbdb;
+  width: 500px;
+  padding:3px 5px;
+        }
+
+.searchbutton {
+  padding: 3px 10px;
+  color: black;
+        }
+
+.searchbutton:hover  {
+               } 
+
+.hb-catagories  {
+  background-color: #ffffff;
 }
 
-.button {
-  position: absolute;
-  padding: 6px 15px;
-  border: 2px solid #207cca;
-  background-color: #207cca;
-  color: #fafafa;
+.hb-titles {
+  ul {
+    padding: 0;
+    }
+  li {
+      background-color: white;
+      padding: 0px;
+      margin-left: -20px;
+    }
+    a:link, a:visited {
+      color: #4183c4;
+      text-decoration: none;
+    }
 }
 
-.button:hover  {
-                background-color:#fafafa;
-                color:#207cca;
+h4 {
+  @include border-style(null null solid);
+  @include directional-property(border, width, null null 1px null);
+  @include padding(null null 5px null);
 }
