--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,16 +1,12 @@
 <header>
-  <div class="headercontainer">
-    <div class="headerlogo">
-		  <img src="../images/huboard-enterprise-logo.png"/>
+  <div class="header-container">
+    <div class="header-logo">
+      <img src="{{ site.base }}/images/huboard-enterprise-logo.png"/>
 	  </div>
-	
-	  <div class="headercontent">
+	  <div class="header-content">
       <a href="">Versions</a>
 	    <a href="">Support</a>
 	    <a href="">Return to Huboard Enterprise</a>
 	  </div>
   </div>
 </header>
-
-<body>
-	<div>
