--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,5 +1,15 @@
 <footer>
-<div class="footercontent">
-  <h5>This is the footer</h5>
+  <div class="container">
+    <p class="left">© 2015 Huboard, Inc. All rights reserved.<br> We have no affiliation with Github.com.
+    </p>
+    <a href="https://enterprise.huboard.com" class="hu">
+      <img alt="Huboard Logo" src="{{ site.base }}/images/hu.png" height="25" width="25">
+    </a>
+    <!-- I do not know why this will not list horizontally -->
+    <ul class="right">
+      <li> Terms </li>
+      <li> Privacy </li>
+      <li> Support </li>
+    </ul>
+  </div>
 </footer>
-</div>
