--- a/source/_assets/stylesheets/application.scss
+++ b/source/_assets/stylesheets/application.scss
@@ -5,5 +5,5 @@
 // Took base/base out as it was constantly conflicting with my sass in _gloabal.scss
 // base/base contains built in sass files for several functions ie forms.scss, buttons.scss etc.
 //@import "base/base";
-
+@import "hb-articles";
 @import "global";
