--- a/source/_assets/stylesheets/hb-articles.scss
+++ b/source/_assets/stylesheets/hb-articles.scss
@@ -43,7 +43,7 @@
         border: 1px solid #efefef;
         cursor: pointer;
         &:hover {
-          z-index: 2;
+          z-index: 100;
           opacity: 1;
           position: relative;
           right: 0px;
@@ -80,7 +80,7 @@
   }
 }
 
-.hb-note {
+.alert.tip {
   position: relative;
   margin: 0 auto;
   padding: 15px;
@@ -103,7 +103,7 @@
     border: 1px solid #efefef;
     cursor: pointer;
     &:hover {
-      z-index: 2;
+      z-index: 100;
       opacity: 1;
       position: relative;
       max-width: 70%;
