--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
   <!-- There has got to be a better way for me to implement this. -->
       {% include header.html %}
-          <div class='body-container'>
+          <div class='hb-body-container'>
             <div class='hb-form'>
               <form>
                 <input class='search'  placeholder='How can we help?' required=' type='text'>
