--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,11 +1,10 @@
 <footer>
-  <div class="container">
-    <p class="left">© 2015 Huboard, Inc. All rights reserved.<br> We have no affiliation with Github.com.
+  <div class="hb-container">
+    <p class="left">© 2015 HuBoard, Inc. All rights reserved.<br> We have no affiliation with Github.com.
     </p>
     <a href="https://enterprise.huboard.com" class="hu">
-      <img alt="Huboard Logo" src="{{ site.base }}/images/hu.png" height="25" width="25">
+      <img alt="HuBoard Logo" src="{{ site.base }}/images/hu.png" height="17px">
     </a>
-    <!-- I do not know why this will not list horizontally -->
     <ul class="right">
       <li> Terms </li>
       <li> Privacy </li>
