--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
-  <div class="header-container">
-    <div class="header-logo">
+  <div class="hb-header-container">
+    <div class="hb-header-logo">
       <img src="{{ site.base }}/images/huboard-enterprise-logo.png"/>
 	  </div>
-	  <div class="header-content">
+	  <div class="hb-header-content">
       <a href="">Versions</a>
 	    <a href="">Support</a>
-	    <a href="">Return to Huboard Enterprise</a>
+	    <a href="">Return to HuBoard Enterprise</a>
 	  </div>
   </div>
 </header>
