removed search js I butchered

--- a/source/_layouts/articles.html
+++ b/source/_layouts/articles.html
@@ -16,12 +16,7 @@
     {% include header.html %}
       <div class='hb-breadcrumb-container'>
     {% include hb-breadcrumbs.html %}
-        <div class="hb-article-search">
-          <form>
-            <input placeholder='How can we help?' required=' type='text'>
-            <input type='button' value='Search'>
-          </form>
-        </div>
+    {% include hb-search.html %}
       </div>
       <div class='hb-body-container'>
         <div class='hb-article-content'>
