--- a/source/_assets/stylesheets/hb-articles.scss
+++ b/source/_assets/stylesheets/hb-articles.scss
@@ -47,18 +47,19 @@
       }
 
       img {
+        z-index: 100;
         max-width: 100px;
-        opacity: .5;
-        float: right;
-        margin: 0px;
+        opacity: .8;
         border: 1px solid #efefef;
+        float: right;
         cursor: pointer;
         &:hover {
-          z-index: 100;
-          opacity: 1;
+          z-index: 200;
           position: absolute;
           right: 0px;
-          max-width: 70%;
+          top: 0px;
+          opacity: 1;
+          max-width: 75%;
           border: 1px solid #000000;
         }
       }
@@ -107,19 +108,6 @@
   text-shadow: 0 1px 0 rgba(255,255,255,.8);
 
   img {
-    max-width: 100px;
-    opacity: .5;
-    position: relative;
-    margin: 0px;
-    border: 1px solid #efefef;
-    cursor: pointer;
-    &:hover {
-      z-index: 100;
-      opacity: 1;
-      position: relative;
-      max-width: 70%;
-      border: 1px solid #000000;
-    }
   }
 }
 
