--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -18,11 +18,20 @@
   <!-- There has got to be a better way for me to implement this. -->
       {% include header.html %}
           <div class='hb-body-container'>
-            <div class='hb-form'>
+            <div class="hb-form">
               <form>
-                <input class='search'  placeholder='How can we help?' required=' type='text'>
-                <input class='searchbutton' type='button' value='Search'>
+                <div id="search">
+                  <form action="/search" method="get">
+                    <input type="text" id="search-query" name="q" placeholder="Search" autocomplete="off">
+                    <input class='searchbutton' type='submit' value='Search' formaction="/search" >
+                  </form>
+                </div>
               </form>
+              <section id="search-results" style="display: none;">
+                <p>Search results</p>
+                <div class="entries">
+                </div>
+              </section>
             </div>
           {{ content }}
         </div>
