--- a/source/_includes/hb-breadcrumbs.html
+++ b/source/_includes/hb-breadcrumbs.html
@@ -4,8 +4,11 @@
 {% for crumb in crumbs offset: 1 %}
   {% if forloop.last %}
     / {{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}
+  {% elsif crumb == 'hb-articles' %}
+    <!-- Do Nothing -->
   {% else %}
-    / <a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'hb-articles','Articles ' | remove:'.html' | capitalize }}</a>
+    / <a href="{% assign crumb_limit = forloop.index | plus: 1 %}
+      {% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | remove:'.html' | capitalize }}</a>
   {% endif %}
 {% endfor %}
 </div>
